Archive2/12/321c0a2866f105/output
--- clang++ ---
main.cpp:76:22: error: explicit instantiation of non-template struct 'vector'
template struct std::vector<float64_t> ;
                     ^     ~~~~~~~~~~~
1 error generated.
--- g++ ---
ok
